--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.4.4",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
