add the compeleted signout fucntionaly

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,8 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.17.2",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
